<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/toolbarRegister">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imvSave"
                android:src="@drawable/ic_action_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Save Data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>




    </android.support.v7.widget.Toolbar>

    <!--Content-->
    <LinearLayout
        android:background="#b4ffffff"
        android:padding="15dp"
        android:layout_margin="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Name-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--EditText-->
            <EditText
                android:inputType="text"
                android:id="@+id/edtName"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <!--Email-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--EditText-->
            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/edtEmail"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--EditText-->
            <EditText
                android:inputType="text"
                android:id="@+id/edtPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>